Editable: Fix long links using a gradient to hide the overflow

--- a/blocks/editable/style.scss
+++ b/blocks/editable/style.scss
@@ -84,7 +84,7 @@ figcaption.blocks-editable__tinymce {
 	box-shadow: 0px 3px 20px rgba( 18, 24, 30, .1 ), 0px 1px 3px rgba( 18, 24, 30, .1 );
 	border: 1px solid #e0e5e9;
 	background: #fff;
-	width: 250px;
+	width: 300px;
 	display: inline-flex;
 	align-items: center;
 	font-family: $default-font;
@@ -112,4 +112,10 @@ input.editable-format-toolbar__link-input {
 .editable-format-toolbar__link-value {
 	padding: 10px;
 	flex-grow: 1;
+	overflow: hidden;
+	position: relative;
+
+	&:after {
+		@include long-content-fade( $size: 40% );
+	}
 }
